# ssonic

./: LICENSE-APACHE  LICENSE-MIT
code/: Cargo.toml  README.md  check  check.bash  run_combined  run_powmod.bash  test.bash
code/commit/: Cargo.toml
code/commit/bench_data/: bench_verification_proof.json
code/commit/keys/: 1000_prover.json
code/commit/src/: dark.rs  fiat_shamir.rs  group.rs  lib.rs  poe.rs  poly.rs  rsa_group.rs
code/commit/src/fiat_shamir/: gen_prime.rs  miller.rs
code/common/: Cargo.toml
code/common/src/: group.rs  lib.rs  poly.rs
code/common/src/fiat_shamir/: gen_prime.rs  miller.rs  mod.rs  uniform.rs
code/dark/: Cargo.toml  README.md  run_combined.bash
code/dark/keys/: 100_prover.json
code/dark/src/: dark.rs  lib.rs  poe.rs
code/keys/: 1000_prover.json  100_prover.json
code/sonic/: Cargo.toml  run_powmod.bash
code/sonic/examples/: circuit.rs
code/sonic/keys/: powmod_proof.json
code/sonic/src/: circuit.rs  lib.rs  linear_circuit.rs  modulo.rs  sonic.rs  sparse.rs  uint32.rs
code/sonic/src/circuit/: mod.rs  toposort.rs
latex/: abs-eng.tex  acknowledgements.tex  advisor-comment.tex  appendices.tex  chap-background.tex  chap-circuit.tex  chap-conclusion.tex  chap-dark.tex  chap-implement.tex  chap-introduction.tex  chap-sonic.tex  commands.tex  mainchaps.tex  refs.bib  reviewer-comment.tex  table-of-terms.tex  usmthesis.cls  usmthesis.tex
