[package]
name = "supersonic"
version = "0.1.0"
authors = ["Duy Do <juchiast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poly-commit = { path = "../commit" }

sha2 = "0.9"

rand = "0.7"

serde_json = "1"
serde = { version = "1", features = ["derive"] }

average = "0.10"

log = "0.4"
env_logger = "0.7"

[profile.release]
opt-level = 3
lto = true
debug = 1

[features]
defaults = []
no-assert = ["poly-commit/no-assert"]
