[package]
name = "sonic"
version = "0.1.0"
authors = ["Duy Do <juchiast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common" }
dark = { path = "../dark" }

rug = { version = "1.8", default-features = false, features=["integer", "serde"] }
sha2 = "0.9"
rand = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
average = "0.10"
log = "0.4"
env_logger = "0.7"

[features]
defaults = []
no-assert = ["common/no-assert", "dark/no-assert"]
